[package]
name = "criterion-cuda"
version = "0.2.1"
edition = "2021"
description = "CUDA benchmarking for criterion"
license = "MIT OR Apache-2.0"
authors = ["stephan.seitz@fau.de"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#criterion = "0.3"
criterion = {version="0.3.5", features = ["html_reports"]}
cust = "0.3"
cust_derive = "0.2"
cust_core = "0.1"
once_cell = "1.13"

[[bench]]
path = "examples/add.rs"
name = "cuda_bench"
harness = false
